setup: adicionando logs na controller

--- a/veiculos/src/main/resources/application.properties
+++ b/veiculos/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.file.name=appfile.log
